--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,74 @@
 /* You can add global styles to this file, and also import other style files */
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$job_seeker_front-primary: mat.define-palette(mat.$indigo-palette);
+$job_seeker_front-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$job_seeker_front-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$job_seeker_front-theme: mat.define-light-theme((
+  color: (
+    primary: $job_seeker_front-primary,
+    accent: $job_seeker_front-accent,
+    warn: $job_seeker_front-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($job_seeker_front-theme);
+
+/* You can add global styles to this file, and also import other style files */
+
+@import "~font-awesome/css/font-awesome.min.css";
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+*{
+  padding: 0;
+  margin: 0;
+}
+//buttons
+.button-1, .button-2, .button-3{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: white;
+}
+
+.button-2{
+  border: 2px solid white;
+  border-radius: 25px;
+  padding: 5px 15px;
+  font-size: 13px;
+}
+.button-2:hover{
+  background-color: white;
+  color: black;
+}
+
+.button-3{
+  background-color: dodgerblue;
+  color: white;
+}
+.button-3:hover{
+  background-color: black;
+  color: white;
+  cursor: pointer;;
+}
