--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,7 +1,7 @@
 .main-div {
   min-height: 88vh;
   width: 100%;
-  background-image: url("../../../assets/images/offer 1.png");
+  background-image: url("../../../assets/images/main-banner.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -41,6 +41,10 @@
     .field:invalid{
       border-bottom: 2px solid red;
       color: red;
+    }
+
+    .button-3{
+      padding: 5px 0;
     }
 
   }
