created a function to add consultants to the system and verify them and delete old consultant and re-create as a new. create a function to categorize consultant list using verified or not.

--- a/src/app/components/reception/reception-add-consultants/reception-add-consultants.component.html
+++ b/src/app/components/reception/reception-add-consultants/reception-add-consultants.component.html
@@ -1,4 +1,4 @@
-<form class="add-form" [formGroup]="addForm">
+<form class="add-form" [formGroup]="addForm" (ngSubmit)="submit()">
 
   <div class="row">
     <div class="col-12">
