add cookies service and auth guards to consultant login route. create consultant login without errors. fix a bug in add consultant function. add asset.

--- a/src/app/components/become-consultant/become-consultant.component.html
+++ b/src/app/components/become-consultant/become-consultant.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="d-flex align-items-center justify-content-between">
     <div class="title-1">Become a Global Job Consultant</div>
-    <button class="button-3" style="white-space: nowrap; padding: 5px">SIGN IN</button>
+    <button class="button-3" style="white-space: nowrap; padding: 5px" routerLink="/login">SIGN IN</button>
   </div>
 
   <div class="p-1">Are you passionate about helping individuals find their dream jobs? Do you have a knack for guiding
