--- a/src/app/components/login-reception/login-reception.component.html
+++ b/src/app/components/login-reception/login-reception.component.html
@@ -1,1 +1,36 @@
-<p>login-reception works!</p>
+<div class="container">
+  <div *ngIf="loading" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
+    <div class="d-flex align-items-center justify-content-center w-100 h-100">
+      <div class="d-flex flex-column align-items-center justify-content-center"
+           style="width: 80%; padding: 30px; border: 1px solid #13E8E9; border-radius: 25px; background-color: rgba(255,255,255,.5)">
+        <img src="./assets/images/asset/small_loading.gif" alt="loading" title="Loading" width="60" height="60">
+        <div class="loading-count" style="color: black">Checking...</div>
+      </div>
+    </div>
+  </div>
+  <div class="d-flex flex-column align-items-center justify-content-center">
+    <form class="example-form" [formGroup]="loginForm" (ngSubmit)="login()">
+      <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput formControlName="email" placeholder="Ex. pat@example.com">
+        <mat-error *ngIf="loginForm.hasError('email') && !loginForm.hasError('required')">
+          Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="loginForm.hasError('required')">
+          Email is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Password</mat-label>
+        <input type="password" matInput formControlName="password" placeholder="dagi-97w3-bjh@">
+        <mat-error *ngIf="!loginForm.hasError('required')">
+          Please enter your password
+        </mat-error>
+        <mat-error *ngIf="loginForm.hasError('required')">
+          Password is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <button mat-raised-button color="primary" style="width: 100%">Authorize</button>
+    </form>
+  </div>
+</div>
