--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,21 @@
-<p>dashboard works!</p>
-<router-outlet></router-outlet>
+<div class="top-bar sticky-top">
+  <div class="row">
+    <div class="col-6 col-md-3">
+      <button class="button-3" routerLink="appointment">Appointment Requests</button>
+    </div>
+    <div class="col-6 col-md-3">
+      <button class="button-3" routerLink="unavailable-dates">Set Unavailable Dates</button>
+    </div>
+    <div class="col-6 col-md-3">
+      <button class="button-3" routerLink="consultant-list">View Consultants List</button>
+    </div>
+    <div class="col-6 col-md-3">
+      <button class="button-3" routerLink="requests">Job Seeker Requests</button>
+    </div>
+  </div>
+</div>
+
+<div class="container" style="padding: 15px 0">
+  <router-outlet></router-outlet>
+</div>
+
