fix the bug from backend and create a method to hidden unavailable dates.

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="top-bar sticky-top">
   <div class="row">
     <div class="col-6 col-md-3">
-      <button class="button-3" routerLink="appointment">Appointment Requests</button>
+      <button class="button-3" routerLink="appointments">Appointment Requests</button>
     </div>
     <div class="col-6 col-md-3">
       <button class="button-3" routerLink="unavailable-dates">Set Unavailable Dates</button>
