--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
       <button class="button-3" routerLink="unavailable-dates">Set Unavailable Dates</button>
     </div>
     <div class="col-6 col-md-3">
-      <button class="button-3" routerLink="consultant-list">View Consultants List</button>
+      <button class="button-3" routerLink="approved-appointments">Approved List</button>
     </div>
     <div class="col-6 col-md-3">
       <button class="button-3" routerLink="requests">Job Seeker Requests</button>
