--- a/src/app/components/reception/reception-add-consultants/reception-add-consultants.component.html
+++ b/src/app/components/reception/reception-add-consultants/reception-add-consultants.component.html
@@ -1,6 +1,15 @@
 <form class="add-form" [formGroup]="addForm" (ngSubmit)="submit()">
 
   <div class="row">
+    <div *ngIf="loading" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
+      <div class="d-flex align-items-center justify-content-center w-100 h-100">
+        <div class="d-flex flex-column align-items-center justify-content-center"
+             style="width: 80%; padding: 30px; border: 1px solid #13E8E9; border-radius: 25px; background-color: rgba(255,255,255,.5)">
+          <img src="./assets/images/asset/small_loading.gif" alt="loading" title="Loading" width="60" height="60">
+          <div class="loading-count" style="color: black">Adding...</div>
+        </div>
+      </div>
+    </div>
     <div class="col-12">
       <mat-form-field class="contact-form-full-width" appearance="outline" color="accent">
         <mat-label>Email</mat-label>
