added not found component and coming soon component. integrated the job-seeker services. create methods for send messages and load messages. modify and added new functions to reception dashboard. modify the nav bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,10 +17,15 @@
   <mat-drawer #drawer mode="over" class="drawer">
     <span>MENU</span>
     <ul>
-      <li>nav item</li>
-      <li>nav item</li>
-      <li>nav item</li>
-      <li>nav item</li>
+      <li routerLink="/home">Home</li>
+      <li routerLink="/help-support">Help Support</li>
+      <li routerLink="/become-a-consultant-application">Become a Consultant</li>
+      <li routerLink="/coming-soon">Chat</li>
+      <li routerLink="/coming-soon">Terms & Conditions</li>
+      <li routerLink="/coming-soon">Privacy Policy</li>
+      <li routerLink="/coming-soon">Contact Support</li>
+      <li routerLink="/coming-soon">About Us</li>
+      <li routerLink="/reception">Reception (This is development mode only. in production we will set this to subdomain)</li>
     </ul>
   </mat-drawer>
   <mat-drawer-content>
