--- a/src/app/components/reception/reception-job-seeker-req/reception-job-seeker-req.component.html
+++ b/src/app/components/reception/reception-job-seeker-req/reception-job-seeker-req.component.html
@@ -1,1 +1,16 @@
-<p>reception-job-seeker-req works!</p>
+<table class="table table-hover">
+  <thead>
+  <tr>
+    <th>Email</th>
+    <th>Message</th>
+    <th>Action</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let m of messageRequests">
+    <td><a href="mailto:{{m.email}}">{{m.email}}</a></td>
+    <td>{{m.message}}</td>
+    <td title="Remove"><button class="button-3" (click)="detectMessageRequest(m.email)"><mat-icon>remove</mat-icon></button></td>
+  </tr>
+  </tbody>
+</table>
