--- a/src/app/components/dashboard/appointments/appointments.component.html
+++ b/src/app/components/dashboard/appointments/appointments.component.html
@@ -25,7 +25,7 @@
     <td>{{a.jobRole}}</td>
     <td title="Send an email"><a href="mailto:{{a.email}}">{{a.email}}</a></td>
     <td>{{a.date.split('T',1)}}</td>
-    <td><button (click)="updateAppointment(a.id)">approve</button></td>
+    <td><button mat-raised-button color="accent" (click)="updateAppointment(a.id)">approve</button></td>
   </tr>
   </tbody>
 </table>
