--- a/src/app/components/request-consultant-profession/request-consultant-profession.component.html
+++ b/src/app/components/request-consultant-profession/request-consultant-profession.component.html
@@ -72,6 +72,7 @@
       <div class="col-sm-12 col-md-6">
         <button class="button-3">Apply Consult Job</button>
       </div>
+      <p class="p-1">Already have an account? <span routerLink="/dashboard" style="color: dodgerblue; cursor: pointer;">Log in here</span></p>
     </div>
 
   </form>
