create update credential functions to receptions and consultants. add few meta tags and create simple footer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="heading">
   <div>
-    <button class="button-1" (click)="drawer.toggle()"><mat-icon>reorder</mat-icon></button>
+    <button class="button-1" (click)="drawer.toggle()">
+      <mat-icon>reorder</mat-icon>
+    </button>
     <img src="./assets/images/logo.png" alt="logo" routerLink="/home">
   </div>
   <div class="d-flex">
@@ -25,12 +27,62 @@
       <li routerLink="/coming-soon">Privacy Policy</li>
       <li routerLink="/coming-soon">Contact Support</li>
       <li routerLink="/coming-soon">About Us</li>
-      <li routerLink="/reception">Reception (This is development mode only. in production we will set this to subdomain)</li>
+      <li routerLink="/reception">Reception (This is development mode only. in production we will set this to
+        subdomain)
+      </li>
     </ul>
   </mat-drawer>
   <mat-drawer-content>
     <router-outlet></router-outlet>
   </mat-drawer-content>
 </mat-drawer-container>
+<footer>
+  <div style="background-color: #333333; min-height: 150px">
+    <div class="container">
+      <div class="row" style="padding: 1.5vw 0">
+        <div class="col-12 col-sm-6 col-md-3">
+          <img src="./assets/images/logo.png" alt="logo" style="width: 100%">
+        </div>
+        <div class="col-12 col-sm-6 col-md-3" style="padding: 2vw 0">
+          <div class="p-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+            blanditiis debitis eligendi esse est iure laborum non quae quibusdam voluptatem.
+          </div>
+          <div class="d-flex align-items-center justify-content-start">
+            <a href="" aria-label="facebook"><i class='fab fa-facebook-f'></i></a>
+            <a href=""><i class='fab fa-instagram'></i></a>
+            <a href=""><i class='fab fa-twitter'></i></a>
+            <a href="" aria-label="youtube"><i class='fab fa-youtube'></i></a>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3 d-flex flex-column" style="padding: 2vw 0">
+          <div class="p-1" style="font-size: 26px">Contact Us</div>
+          <div class="p-1">address Rd, Country</div>
+          <div class="p-1">+94771234567</div>
+          <div class="p-1">info@jobseeker.com</div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3 d-flex flex-column" style="padding: 2vw 0">
+          <div class="p-1" style="font-size: 26px">Quick Links</div>
+          <div class="row">
+            <div class="col-6 d-flex flex-column">
+              <a href="/home">Home</a>
+              <a href="/become-a-consultant-application">Become Consultant</a>
+              <a href="/chat">Chat</a>
+              <a href="/about">About Us</a>
+            </div>
+            <div class="col-6 d-flex flex-column">
+              <a href="/privacy">Privacy Policy</a>
+              <a href="/terms">Terms & Conditions</a>
+              <a href="/help-support">Help Support</a>
+              <a href="/contact">Contact Support</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex align-items-center justify-content-center" style="background-color: black">
+      <div class="p-1" style="font-size: 16px">2023 © Kavindu Kokila. All Rights Received.</div>
+    </div>
+  </div>
+</footer>
 
 
