--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .heading{
-  background-color: dimgray;
+  background-color: #333333;
   height: 5vw;
   min-height: 70px;
   padding: 0 50px;
@@ -59,6 +59,15 @@
     min-height: 88vh;
   }
 
+}
+
+.fab{
+  font-size: 40px;
+  margin: 5px;
+}
+
+.p-1{
+  color: white;
 }
 
 
