--- a/src/app/components/reception/reception.component.scss
+++ b/src/app/components/reception/reception.component.scss
@@ -13,3 +13,14 @@
     width: 100%;
   }
 }
+
+.p-1{
+  width: 100%;
+  text-align: right;
+  color: deeppink;
+  margin-right: 15px;
+}
+.p-1:hover{
+  cursor: pointer;
+  color: dodgerblue;
+}
