--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
       <button class="button-3" routerLink="approved-appointments">Approved List</button>
     </div>
     <div class="col-6 col-md-3">
-      <button class="button-3" routerLink="requests">Job Seeker Requests</button>
+      <button class="button-3" routerLink="settings">Settings</button>
     </div>
   </div>
 </div>
