add logout function

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -13,3 +13,13 @@
     width: 100%;
   }
 }
+
+.logout{
+  margin: 5px 20px;
+  text-align: right;
+  color: deeppink;
+  cursor: pointer;
+}
+.logout:hover{
+  color: red;
+}
