--- a/src/app/components/reception/reception.component.html
+++ b/src/app/components/reception/reception.component.html
@@ -1,5 +1,8 @@
 <div class="top-bar sticky-top">
-  <div class="p-1" routerLink="settings">Settings</div>
+  <div class="d-flex">
+    <div class="p-1" routerLink="settings">Settings</div>
+    <div class="p-1" (click)="logout()">Log Out</div>
+  </div>
   <div class="row">
     <div class="col-6 col-md-3">
       <button class="button-3" routerLink="interview">Interview Requests</button>
