--- a/src/app/components/reception/reception.component.scss
+++ b/src/app/components/reception/reception.component.scss
@@ -15,10 +15,9 @@
 }
 
 .p-1{
-  width: 100%;
   text-align: right;
   color: deeppink;
-  margin-right: 15px;
+  margin-left: 15px;
 }
 .p-1:hover{
   cursor: pointer;
