--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="top-bar sticky-top">
+  <div class="logout"><span title="Logout" (click)="logout()">Log Out</span></div>
   <div class="row">
     <div class="col-6 col-md-3">
       <button class="button-3" routerLink="appointments">Appointment Requests</button>
