update testPlanDocumentation part 3

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <img src="./assets/images/asset/small_loading.gif" alt="loading" width="60" height="60">
     <p class="p-1">Checking.. Secure the network..</p>
     <mat-progress-bar mode="indeterminate" color="warn"></mat-progress-bar>
-    <p class="p-1">Please wait to configure the backend</p>
+    <p class="p-1">Please wait up to 2min to configure the backend</p>
   </div>
   <div class="appointment-div">
     <form [formGroup]="appointmentForm" (ngSubmit)="submit()">
